--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
       </ul>
       <img src="images/spiderman.png"> 
     </div>
+    <div class="section-2">
     <div class="section-2-header"><div>Some random information</div></div>
     <div class="section-2-images">
       <img src="images/spiderman.png">
@@ -41,6 +42,16 @@
       <div>This is some subtext under an illustration or image.</div>
       <div>This is some subtext under an illustration or image.</div>
       <div>This is some subtext under an illustration or image.</div>
+    </div>
+    </div>
+    <div class="section-3">
+      <div class="section-3-quote"><div>"I believe there's a hero in all of us, 
+        that keeps us honest, gives us strength, makes us noble,
+         and finally allows us to die with pride, even though sometimes we have to be steady,
+         and give up the thing we want the most. Even our dreams."
+        </div>
+        </div>
+      <div class="section-3-name"><div>-Spiderman</div></div>  
     </div>
   </body>
 </html>
