--- a/index.html
+++ b/index.html
@@ -53,5 +53,15 @@
         </div>
       <div class="section-3-name"><div>-Spiderman</div></div>  
     </div>
+    <div class="section-4">
+      <ul>
+        <li class="item1">Call to action! it's time!</li>
+        <li class="item2">Sign up for our produt by clicking that button right over there!</li>
+      </ul>
+      <button>Sign up</button>
+    </div>
+    <div class="footer">
+      <div>Copyright Ⓒ The Odin Project 2022</div>
+    </div>
   </body>
 </html>
