--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       <button>Sign up</button>
     </div>
     <div class="footer">
-      <div>Copyright Ⓒ The Odin Project 2022</div>
+      <div>Copyright Ⓒ Jacob Simmons</div>
     </div>
   </body>
 </html>
